--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -11,8 +11,8 @@ jobs:
       - name: login to Docker Hub
         uses: docker/login-action@v1
         with: 
-          username: ${{ secrets.DOCKERHUB_USER }}
-          passwrod: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.DOCKERHUB_USER1 }}
+          passwrod: ${{ secrets.DOCKERHUB_TOKEN2 }}
       - name: Checkout
         uses: actions/checkout@v2
       - name: Test
